--- a/plugin.html
+++ b/plugin.html
@@ -16,11 +16,11 @@
 			/* zorg dat objectstructuur aanwezig is */
 			window.EFCS = window.EFCS || {};
 			EFCS.plugins = EFCS.plugins || {};
-			EFCS.plugins.pluginname = EFCS.plugins.pluginname || {};
-			EFCS.plugins.pluginname.instances = EFCS.plugins.pluginname.instances || [];
+			EFCS.plugins.pluginName = EFCS.plugins.pluginName || {};
+			EFCS.plugins.pluginName.instances = EFCS.plugins.pluginName.instances || [];
 			
 			//push object met settings voor deze instance in array; wordt dan on dom ready geinitialiseerd
-			EFCS.plugins.pluginname.instances.push({
+			EFCS.plugins.pluginName.instances.push({
 				selector: "#someElement .pluginContent",
 				options: {
 					someVar: "A new value",
@@ -39,7 +39,7 @@
 	<div id="someElement2" class="pluginElement">
 		<script>
 			//en een tweede instance definieren; de hele zut van window.EFCS = window.EFCS || {}... hoef je niet nog een keer toe te voegen (maar als je het wel doet breekt er niets)
-			EFCS.plugins.pluginname.instances.push({
+			EFCS.plugins.pluginName.instances.push({
 				selector: "#someElement2",
 				options: {
 					someVar: "A new value for #2",
@@ -69,7 +69,7 @@
 	<script>
 		//maar zo kan het ook nog steeds, een plugin in de pagina initialiseren:
 		jQuery(document).ready(function($) {
-			$("#someElement3").pluginname({
+			$("#someElement3").pluginName({
 				someVar: "A new value for #3",
 				someOtherVar: "Another new value for #3"
 			});
